Bug 46797 - ActUserManager-related crashes
Summary: ActUserManager-related crashes
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-29 16:51 UTC by Giovanni Campagna
Modified: 2012-03-15 16:45 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
ActUserManager: ensure the manager is alive across async calls (8.36 KB, patch)
2012-02-29 16:51 UTC, Giovanni Campagna
Details | Splinter Review

Description Giovanni Campagna 2012-02-29 16:51:13 UTC
I tracked down the problem to be in not using hard references for closure parameters, which means async callbacks and signal handlers are sometimes called with a finalized manager.

Patch coming.
Comment 1 Giovanni Campagna 2012-02-29 16:51:32 UTC
Created attachment 57838 [details] [review]
ActUserManager: ensure the manager is alive across async calls

Under current design and usage patterns, the library user is not
expected to keep the manager around, if only interested in signals
from ActUsers. Therefore additional references must be taken to
ensure that the object is still valid at the end of an async call,
and signals must be prevented from firing on finalized objects.
Comment 2 Ray Strode [halfline] 2012-03-02 10:18:29 UTC
hey, this patch doesn't seem to apply against master.  Do you know why?
Comment 3 Giovanni Campagna 2012-03-02 11:28:09 UTC
Sorry, it is on top of bug 46794.
Comment 4 Ray Strode [halfline] 2012-03-15 16:45:53 UTC
Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.